src/objects/Contract_Compliance__c.object
<CustomObject>
    <description>Cambridge Contract</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>TMN_Contract__c</referenceTo>
        <relationshipLabel>Contract Compliance</relationshipLabel>
        <relationshipName>ContractCompliance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Compliance</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>